--- a/profile_test.Rmd
+++ b/profile_test.Rmd
@@ -545,8 +545,8 @@ For the fourth test case of Westfall-Young Single Step, we are starting right of
 
 ```{r}
 start <- Sys.time()
-mdes.wyss.indiv.100 <- MDES.blockedRCT.2(M = 10, numFalse = 5, Ai_mdes = 3, J = 10, n.j = 100, power = 0.80, power.definition = "indiv", MTP = "WY-SS", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, snum = 500, ncl = 2, updateProgress = NULL)
-print(mdes.wyss.indiv.100)
+mdes.wyss.indiv.500 <- MDES.blockedRCT.2(M = 10, numFalse = 5, Ai_mdes = 3, J = 10, n.j = 100, power = 0.80, power.definition = "indiv", MTP = "WY-SS", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, snum = 500, ncl = 2, updateProgress = NULL)
+print(mdes.wyss.indiv.500)
 end <- Sys.time()
 elapsed <- end-start
 print(elapsed)
@@ -555,7 +555,7 @@ print(elapsed)
 
 ### Test case 5 for MDES-Westfall-Young Single Step-indiv speed profile
 
-For the fourth test case of Westfall-Young Single Step, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 10 instead of 1,000 with the permutation size of 10,000. The power definition is for individual power. We have made the sample size to be 1,000 as this is the standard we hope to achieve.
+For the fifth test case of Westfall-Young Single Step, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 10 instead of 1,000 with the permutation size of 10,000. The power definition is for individual power. We have made the sample size to be 1,000 as this is the standard we hope to achieve. It took **6** iterations of searching for the optimal MDES and a total of **23.2605** minutes to get the final results. The memory usage is definitely less than 4GB. The memory report is inconclusive as we do not have the pandoc report as usual.
 
 * M_mdes = 10
 * Aimpact_mdes = 10
@@ -574,14 +574,40 @@ For the fourth test case of Westfall-Young Single Step, we are starting right of
 
 ```{r}
 start <- Sys.time()
-mdes.wyss.indiv.100 <- MDES.blockedRCT.2(M = 10, numFalse = 5, Ai_mdes = 3, J = 10, n.j = 100, power = 0.80, power.definition = "indiv", MTP = "WY-SS", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, snum = 500, ncl = 2, updateProgress = NULL)
-print(mdes.wyss.indiv.100)
+mdes.wyss.indiv.1000 <- MDES.blockedRCT.2(M = 10, numFalse = 5, Ai_mdes = 3, J = 10, n.j = 100, power = 0.80, power.definition = "indiv", MTP = "WY-SS", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, snum = 1000, ncl = 2, updateProgress = NULL)
+print(mdes.wyss.indiv.1000)
 end <- Sys.time()
 elapsed <- end-start
 print(elapsed)
 ```
 
+### Test case 6 for MDES-Westfall-Young Single Step-min1 speed profile
 
+For the sixth test case of Westfall-Young Single Step, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 10 instead of 1,000 with the permutation size of 10,000. The power definition is for min1 power. We have made the sample size to be 1,000 as this is the standard we hope to achieve. 
+
+* M_mdes = 10
+* Aimpact_mdes = 10
+* J_mdes = 10
+* n.j_mdes = 100
+* power_mdes = 0.80
+* MTP_mdes = BH
+* me_mdes = 0.05
+* p_mdes = 0.5
+* alpha_mdes = 0.05
+* numCovar.1_mdes = 5
+* R2.1_mdes = 0.5
+* tnum = 10000
+* snum = 1000
+* power.definition = min1
+
+```{r}
+start <- Sys.time()
+mdes.wyss.min1.1000 <- MDES.blockedRCT.2(M = 10, numFalse = 5, Ai_mdes = 3, J = 10, n.j = 100, power = 0.80, power.definition = "min1", MTP = "WY-SS", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, snum = 1000, ncl = 2, updateProgress = NULL)
+print(mdes.wyss.min1.1000)
+end <- Sys.time()
+elapsed <- end-start
+print(elapsed)
+```
 
 
 
