--- a/profile_test.Rmd
+++ b/profile_test.Rmd
@@ -208,7 +208,7 @@ power.blockedRCT.2(M = 10, MDES = 0.125, Ai = 3 , J = 50 , n.j = 100, R2.1 = 0.5
 
 ## Summary for MDES speed profiles for BH
 
-MDES test for BH works within reasonable time around 30 seconds for individual and 1-minimal power. However, for complete power, we have not been able to find a satisfactory MDES even after increasing the iterations to 45. We have used up to 4GB of RAM to estimate an optimal MDES to no avaial. 
+MDES test for BH works within reasonable time around 30 seconds for **individual and 1-minimal** power. However, for complete power, we have not been able to find a satisfactory MDES even after increasing the iterations to 45. We have used up to 4GB of RAM to estimate an optimal MDES to no avaial. 
 
 ### Test case 1 for MDES-BH-indiv speed profile
 
@@ -454,7 +454,7 @@ print(mdes.holm.complete)
 
 ### Test case 1 for MDES-Westfall-Young Single Step-indiv speed profile
 
-For the first test case of Westfall-Young Single Step, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 10 instead of 1,000 with the permutation size of 10,000. The power definition is for individual power. We have picked a sample size of 10 as we know it would take approximately 3 minutes for each call of Power on Westfall-Young Single Step with sample size of 1,000. With 10 samples, it took **11** iterations to get a satisfactory MDES which takes around **1.427** minutes. Approximately, **2.096** GB of memory is used up.
+For the first test case of Westfall-Young Single Step, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 10 instead of 1,000 with the permutation size of 10,000. The power definition is for **individual** power. We have picked a sample size of 10 as we know it would take approximately 3 minutes for each call of Power on Westfall-Young Single Step with sample size of 1,000. With 10 samples, it took **11** iterations to get a satisfactory MDES which takes around **1.427** minutes. Approximately, **2.096** GB of memory is used up.
 
 * M_mdes = 10
 * Aimpact_mdes = 10
@@ -478,7 +478,7 @@ print(mdes.wyss.indiv.10)
 
 ### Test case 2 for MDES-Westfall-Young Single Step-indiv speed profile
 
-For the first test case of Westfall-Young Single Step, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 10 instead of 1,000 with the permutation size of 10,000. The power definition is for individual power. We have doubled the sample size to be 20. This is to test whether we have enough memory for sample size of 20 for the number of iterations needed to get MDES. The number of iteration used up goes down to **5** from **11** with the total elapsed time being a whopping **57** seconds. The total memory used up is **1.5** GB so less than when it was for 10 samples but with more iterations.
+For the first test case of Westfall-Young Single Step, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 10 instead of 1,000 with the permutation size of 10,000. The power definition is for **individual** power. We have doubled the sample size to be 20. This is to test whether we have enough memory for sample size of 20 for the number of iterations needed to get MDES. The number of iteration used up goes down to **5** from **11** with the total elapsed time being a whopping **57** seconds. The total memory used up is **1.5** GB so less than when it was for 10 samples but with more iterations.
 
 * M_mdes = 10
 * Aimpact_mdes = 10
@@ -503,7 +503,7 @@ print(mdes.wyss.indiv.100)
 
 ### Test case 3 for MDES-Westfall-Young Single Step-indiv speed profile
 
-For the third test case of Westfall-Young Single Step, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 10 instead of 1,000 with the permutation size of 10,000. The power definition is for individual power. We have made the sample size to be 1,00 to see if there is any change in memory usage, elapsed time, iterations etc. The results are looking good with elapsed time being 2.42 minutes, with usage of 2GB and a total of 5 iterations. Westfall-Young SD and Westfall-Young SS has taken the biggest share of time consumption for power calculation overtaking the multtest function for the other MTP adjustments.
+For the third test case of Westfall-Young Single Step, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 10 instead of 1,000 with the permutation size of 10,000. The power definition is for **individual** power. We have made the sample size to be 1,00 to see if there is any change in memory usage, elapsed time, iterations etc. The results are looking good with elapsed time being 2.42 minutes, with usage of 2GB and a total of 5 iterations. Westfall-Young SD and Westfall-Young SS has taken the biggest share of time consumption for power calculation overtaking the multtest function for the other MTP adjustments.
 
 * M_mdes = 10
 * Aimpact_mdes = 10
@@ -526,7 +526,7 @@ print(mdes.wyss.indiv.100)
 ```
 ### Test case 4 for MDES-Westfall-Young Single Step-indiv speed profile
 
-For the fourth test case of Westfall-Young Single Step, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 10 instead of 1,000 with the permutation size of 10,000. The power definition is for individual power. We have made the sample size to be 5,00 to see if there is any change in memory usage, elapsed time, iterations etc.It took 6 iterations to get the optimal result but pandocs run out of memory to get the exact minutes so, we will not have a detailed report. Rather, we re-run it for a clocked time. It took approximately **12** minutes and **2** GB to get the optimal MDES.
+For the fourth test case of Westfall-Young Single Step, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 10 instead of 1,000 with the permutation size of 10,000. The power definition is for **individual** power. We have made the sample size to be 5,00 to see if there is any change in memory usage, elapsed time, iterations etc.It took 6 iterations to get the optimal result but pandocs run out of memory to get the exact minutes so, we will not have a detailed report. Rather, we re-run it for a clocked time. It took approximately **12** minutes and **2** GB to get the optimal MDES.
 
 * M_mdes = 10
 * Aimpact_mdes = 10
@@ -555,7 +555,7 @@ print(elapsed)
 
 ### Test case 5 for MDES-Westfall-Young Single Step-indiv speed profile
 
-For the fifth test case of Westfall-Young Single Step, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 10 instead of 1,000 with the permutation size of 10,000. The power definition is for individual power. We have made the sample size to be 1,000 as this is the standard we hope to achieve. It took **6** iterations of searching for the optimal MDES and a total of **23.2605** minutes to get the final results. The memory usage is definitely less than 4GB. The memory report is inconclusive as we do not have the pandoc report as usual.
+For the fifth test case of Westfall-Young Single Step, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 10 instead of 1,000 with the permutation size of 10,000. The power definition is for **individual** power. We have made the sample size to be 1,000 as this is the standard we hope to achieve. It took **6** iterations of searching for the optimal MDES and a total of **23.2605** minutes to get the final results. The memory usage is definitely less than 4GB. The memory report is inconclusive as we do not have the pandoc report as usual.
 
 * M_mdes = 10
 * Aimpact_mdes = 10
@@ -583,7 +583,7 @@ print(elapsed)
 
 ### Test case 6 for MDES-Westfall-Young Single Step-min1 speed profile
 
-For the sixth test case of Westfall-Young Single Step, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 10 instead of 1,000 with the permutation size of 10,000. The power definition is for min1 power. We have made the sample size to be 1,000 as this is the standard we hope to achieve. 
+For the sixth test case of Westfall-Young Single Step, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 10 instead of 1,000 with the permutation size of 10,000. The power definition is for **min1** power. We have made the sample size to be 1,000 as this is the standard we hope to achieve. It took a total of **2** iterations and elapsed time of **10.25772** minutes.
 
 * M_mdes = 10
 * Aimpact_mdes = 10
@@ -610,4 +610,31 @@ print(elapsed)
 ```
 
 
+### Test case 7 for MDES-Westfall-Young Single Step-complete speed profile
+
+For the sixth test case of Westfall-Young Single Step, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 10 instead of 1,000 with the permutation size of 10,000. The power definition is for **complete** power. We have pared down the outcomes to 5 with actual affects at 5 as well to see if we can hit an optimal complete power within the limitations of iterations we have set. 
+
+* M_mdes = 5
+* Aimpact_mdes = 5
+* J_mdes = 10
+* n.j_mdes = 100
+* power_mdes = 0.80
+* MTP_mdes = BH
+* me_mdes = 0.05
+* p_mdes = 0.5
+* alpha_mdes = 0.05
+* numCovar.1_mdes = 5
+* R2.1_mdes = 0.5
+* tnum = 10000
+* snum = 1000
+* power.definition = min1
+
+```{r}
+start <- Sys.time()
+mdes.wyss.complete.1000 <- MDES.blockedRCT.2(M = 5, numFalse = 5, Ai_mdes = 5, J = 10, n.j = 100, power = 0.80, power.definition = "complete", MTP = "WY-SS", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, snum = 1000, ncl = 2, updateProgress = NULL)
+print(mdes.wyss.complete.1000)
+end <- Sys.time()
+elapsed <- end-start
+print(elapsed)
+```
 
