--- a/profile_test.Rmd
+++ b/profile_test.Rmd
@@ -612,7 +612,7 @@ print(elapsed)
 
 ### Test case 7 for MDES-Westfall-Young Single Step-complete speed profile
 
-For the sixth test case of Westfall-Young Single Step, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 10 instead of 1,000 with the permutation size of 10,000. The power definition is for **complete** power. We have pared down the outcomes to 5 with actual affects at 5 as well to see if we can hit an optimal complete power within the limitations of iterations we have set. 
+For the sixth test case of Westfall-Young Single Step, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 10 instead of 1,000 with the permutation size of 10,000. The power definition is for **complete** power. We have pared down the outcomes to 5 with actual affects at 5 as well to see if we can hit an optimal complete power within the limitations of iterations we have set. The total amount of time it has taken to compute a MDES for complete power is **6.31368** minutes within **2** iterations. 
 
 * M_mdes = 5
 * Aimpact_mdes = 5
@@ -637,4 +637,33 @@ end <- Sys.time()
 elapsed <- end-start
 print(elapsed)
 ```
+
+### Test case 8 for MDES-Westfall-Young Single Step-complete speed profile
+
+For the sixth test case of Westfall-Young Single Step, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 10 instead of 1,000 with the permutation size of 10,000. The power definition is for **complete** power. We have increased the outcomes to 10 with actual affects at 10 as well to see if we can hit an optimal complete power within the limitations of iterations we have set. 
+
+* M_mdes = 5
+* Aimpact_mdes = 5
+* J_mdes = 10
+* n.j_mdes = 100
+* power_mdes = 0.80
+* MTP_mdes = BH
+* me_mdes = 0.05
+* p_mdes = 0.5
+* alpha_mdes = 0.05
+* numCovar.1_mdes = 5
+* R2.1_mdes = 0.5
+* tnum = 10000
+* snum = 1000
+* power.definition = min1
+
+```{r}
+start <- Sys.time()
+mdes.wyss.complete.1000 <- MDES.blockedRCT.2(M = 10, numFalse = 10, Ai_mdes = 10, J = 10, n.j = 100, power = 0.80, power.definition = "complete", MTP = "WY-SS", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, snum = 1000, ncl = 2, updateProgress = NULL)
+print(mdes.wyss.complete.1000)
+end <- Sys.time()
+elapsed <- end-start
+print(elapsed)
+```
+
 
