--- a/profile_test.Rmd
+++ b/profile_test.Rmd
@@ -162,7 +162,7 @@ power.blockedRCT.2(M = 10, MDES = 0.125, Ai = 3 , J = 50 , n.j = 100, R2.1 = 0.5
 
 ### Test case 6 for Power
 
-In test case 6, we change the number of clusters used to run the power calculation from 2 to 4. The goal was to see whether with increased cluster, we see a decline in computational time. On the contrary, we don't. The computational time increases in fact by **2** seconds to **88** (i.e 1 minute 20 seconds) seconds. More runs are needed to confirm whether there is a statistical fluke or not.
+In test case 6, we change the number of clusters used to run the power calculation from 2 to 4. The goal was to see whether with increased cluster, we see a decline in computational time. On the contrary, we don't. The computational time increases in fact by **2** seconds to **88** (i.e 1 minute 28 seconds) seconds. More runs are needed to confirm whether there is a statistical fluke or not.
 
 * M = 10
 * MDES = 0.125
@@ -311,7 +311,7 @@ MDES.blockedRCT.2(M = 10, numFalse = 5, Ai_mdes = 3, J = 10, n.j = 100, power = 
 Here compared to test 4, we increase the actual impact of MDES to 10 from 3. The time elapsed actually goes back down by 1.5 seconds to **28.5** seconds.
 
 * M_mdes = 10
-* Aimpact_mdes = 10
+* Aimpact_mdes = 3
 * J_mdes = 10
 * n.j_mdes = 100
 * power_mdes = 0.5
@@ -334,7 +334,7 @@ MDES.blockedRCT.2(M = 10, numFalse = 5, Ai_mdes = 3, J = 10, n.j = 100, power = 
 In this test case, changed the definition of power from individual to 1-minimal. The time elapsed to get an estimate of the MDES within the range is **37.5** seconds after **5** iterations of binary search. 
 
 * M_mdes = 10
-* Aimpact_mdes = 10
+* Aimpact_mdes = 3
 * J_mdes = 10
 * n.j_mdes = 100
 * power_mdes = 0.5
@@ -351,13 +351,13 @@ In this test case, changed the definition of power from individual to 1-minimal.
 ```{r}
 MDES.blockedRCT.2(M = 10, numFalse = 5, Ai_mdes = 3, J = 10, n.j = 100, power = 0.5, power.definition = "min1", MTP = "BH", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, snum = 1000, ncl = 2, updateProgress = NULL)
 ```
-### Test case 7-8-9 for MDES-BH-indiv speed profile
+### Test case 7-8-9 for MDES-BH-complete speed profile
 
 In test case 7-8-9, we changed the definition of power from min1 (1-minimal power) to complete power. We increased the number of iterations to search for the optimal MDES to a range between 25-45 iterations. My AWS instance ran out of memory at around 40 iterations but clearing the rest of open programs provide more RAM. The currently available RAM for computation is around 4GB.
 A search for an optimal MDES at complete power is unsuccessful up to 45 iterations in both BF & BH.
 
 * M_mdes = 10
-* Aimpact_mdes = 10
+* Aimpact_mdes = 3
 * J_mdes = 10
 * n.j_mdes = 100
 * power_mdes = 0.5
@@ -381,14 +381,14 @@ For Holms MTP, the case to find MDES under individual power and 1-minimal power 
 
 ### Test case 1 for MDES-Holms-indiv speed profile
 
-For the first test case of Holms, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 1,000 with the permutation size of 10,000. The power definition is for individual power. We reach to an optimal MDES in 5 iterations around **37.7** seconds.
+For the first test case of Holms, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 1,000 with the permutation size of 10,000. The power definition is for individual power. We reach to an optimal MDES in **5** iterations around **37.7** seconds.
 
 * M_mdes = 10
 * Aimpact_mdes = 10
 * J_mdes = 10
 * n.j_mdes = 100
 * power_mdes = 0.80
-* MTP_mdes = BH
+* MTP_mdes = Holms
 * me_mdes = 0.05
 * p_mdes = 0.5
 * alpha_mdes = 0.05
@@ -412,7 +412,7 @@ For the second test case of Holms, we are starting right off with 10 blocks, a h
 * J_mdes = 10
 * n.j_mdes = 100
 * power_mdes = 0.80
-* MTP_mdes = BH
+* MTP_mdes = Holms
 * me_mdes = 0.05
 * p_mdes = 0.5
 * alpha_mdes = 0.05
@@ -429,10 +429,10 @@ print(mdes.holm.min1)
 
 ### Test case 3 for MDES-Holms-complete speed profile
 
-For the second test case of Holms, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 1,000 with the permutation size of 10,000. The power definition is for 1-minimal power.The total elapsed time is **4.38** minutes and we cannot find an optimal MDES after 45 iterations.
+For the third test case of Holms, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 1,000 with the permutation size of 10,000. The power definition is for complete power.The total elapsed time is **4.38** minutes and we cannot find an optimal MDES after 45 iterations.
 
 * M_mdes = 10
-* Aimpact_mdes = 10
+* Ai_mdes = 3
 * J_mdes = 10
 * n.j_mdes = 100
 * power_mdes = 0.80
@@ -447,9 +447,38 @@ For the second test case of Holms, we are starting right off with 10 blocks, a h
 * power.definition = complete
 
 ```{r}
-mdes.holm.complete <- MDES.blockedRCT.2(M = 10, numFalse = 5, Ai_mdes = 3, J = 10, n.j = 100, power = 0.80, power.definition = "complete", MTP = "HO", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, snum = 1000, ncl = 2, updateProgress = NULL)
-print(mdes.holm.complete)
+mdes.holm.complete.01 <- MDES.blockedRCT.2(M = 10, numFalse = 5, Ai_mdes = 3, J = 10, n.j = 100, power = 0.80, power.definition = "complete", MTP = "HO", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, snum = 1000, ncl = 2, updateProgress = NULL)
+print(mdes.holm.complete.01)
 ```
+
+### Test case 4 for MDES-Holms-complete speed profile
+
+For the fourth test case of holms, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 1,000 with the permutation size of 10,000. The power definition is for complete power. We have readjusted the input parameters of **M**, **numFalse**, and **Ai_mdes** (the latter two which determines how many of the outcomes have actual effect to the same as the number of outcomes). We believe this will allow us to find the optimal MDES within a few iterations of search. It took **6** iterations and a total time of **23.54** minutes to get the desired results.
+
+* M_mdes = 10
+* Ai_mdes = 10
+* J_mdes = 10
+* n.j_mdes = 100
+* power_mdes = 0.80
+* MTP_mdes = Holms
+* me_mdes = 0.05
+* p_mdes = 0.5
+* alpha_mdes = 0.05
+* numCovar.1_mdes = 5
+* R2.1_mdes = 0.5
+* tnum = 10000
+* snum = 1000
+* power.definition = complete
+
+```{r}
+start <- Sys.time()
+mdes.holm.complete.02 <- MDES.blockedRCT.2(M = 10, numFalse = 10, Ai_mdes = 10, J = 10, n.j = 100, power = 0.80, power.definition = "complete", MTP = "HO", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, snum = 1000, ncl = 2, updateProgress = NULL)
+print(mdes.holm.complete.02)
+end <- Sys.time()
+elapsed <- end-start
+print(elapsed)
+```
+
 ## Summary for MDES speed profiles for Westfall-Young Single Step
 
 ### Test case 1 for MDES-Westfall-Young Single Step-indiv speed profile
@@ -461,7 +490,7 @@ For the first test case of Westfall-Young Single Step, we are starting right off
 * J_mdes = 10
 * n.j_mdes = 100
 * power_mdes = 0.80
-* MTP_mdes = BH
+* MTP_mdes = WYSS
 * me_mdes = 0.05
 * p_mdes = 0.5
 * alpha_mdes = 0.05
@@ -485,7 +514,7 @@ For the first test case of Westfall-Young Single Step, we are starting right off
 * J_mdes = 10
 * n.j_mdes = 100
 * power_mdes = 0.80
-* MTP_mdes = BH
+* MTP_mdes = WYSS
 * me_mdes = 0.05
 * p_mdes = 0.5
 * alpha_mdes = 0.05
@@ -503,14 +532,14 @@ print(mdes.wyss.indiv.100)
 
 ### Test case 3 for MDES-Westfall-Young Single Step-indiv speed profile
 
-For the third test case of Westfall-Young Single Step, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 10 instead of 1,000 with the permutation size of 10,000. The power definition is for **individual** power. We have made the sample size to be 1,00 to see if there is any change in memory usage, elapsed time, iterations etc. The results are looking good with elapsed time being 2.42 minutes, with usage of 2GB and a total of 5 iterations. Westfall-Young SD and Westfall-Young SS has taken the biggest share of time consumption for power calculation overtaking the multtest function for the other MTP adjustments.
+For the third test case of Westfall-Young Single Step, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 10 instead of 1,000 with the permutation size of 10,000. The power definition is for **individual** power. We have made the sample size to be 1,00 to see if there is any change in memory usage, elapsed time, iterations etc. The results are looking good with elapsed time being **2.42** minutes, with usage of **2GB** and a total of **5** iterations. Westfall-Young SD and Westfall-Young SS has taken the biggest share of time consumption for power calculation overtaking the multtest function for the other MTP adjustments.
 
 * M_mdes = 10
 * Aimpact_mdes = 10
 * J_mdes = 10
 * n.j_mdes = 100
 * power_mdes = 0.80
-* MTP_mdes = BH
+* MTP_mdes = WYSS
 * me_mdes = 0.05
 * p_mdes = 0.5
 * alpha_mdes = 0.05
@@ -526,14 +555,14 @@ print(mdes.wyss.indiv.100)
 ```
 ### Test case 4 for MDES-Westfall-Young Single Step-indiv speed profile
 
-For the fourth test case of Westfall-Young Single Step, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 10 instead of 1,000 with the permutation size of 10,000. The power definition is for **individual** power. We have made the sample size to be 5,00 to see if there is any change in memory usage, elapsed time, iterations etc.It took 6 iterations to get the optimal result but pandocs run out of memory to get the exact minutes so, we will not have a detailed report. Rather, we re-run it for a clocked time. It took approximately **12** minutes and **2** GB to get the optimal MDES.
+For the fourth test case of Westfall-Young Single Step, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 10 instead of 1,000 with the permutation size of 10,000. The power definition is for **individual** power. We have made the sample size to be 5,00 to see if there is any change in memory usage, elapsed time, iterations etc.It took **6** iterations to get the optimal result but pandocs run out of memory to get the exact minutes so, we will not have a detailed report. Rather, we re-run it for a clocked time. It took approximately **12** minutes and **2** GB to get the optimal MDES.
 
 * M_mdes = 10
 * Aimpact_mdes = 10
 * J_mdes = 10
 * n.j_mdes = 100
 * power_mdes = 0.80
-* MTP_mdes = BH
+* MTP_mdes = WYSS
 * me_mdes = 0.05
 * p_mdes = 0.5
 * alpha_mdes = 0.05
@@ -562,7 +591,7 @@ For the fifth test case of Westfall-Young Single Step, we are starting right off
 * J_mdes = 10
 * n.j_mdes = 100
 * power_mdes = 0.80
-* MTP_mdes = BH
+* MTP_mdes = WYSS
 * me_mdes = 0.05
 * p_mdes = 0.5
 * alpha_mdes = 0.05
@@ -590,7 +619,7 @@ For the sixth test case of Westfall-Young Single Step, we are starting right off
 * J_mdes = 10
 * n.j_mdes = 100
 * power_mdes = 0.80
-* MTP_mdes = BH
+* MTP_mdes = WYSS
 * me_mdes = 0.05
 * p_mdes = 0.5
 * alpha_mdes = 0.05
@@ -640,10 +669,10 @@ print(elapsed)
 
 ### Test case 8 for MDES-Westfall-Young Single Step-complete speed profile
 
-For the sixth test case of Westfall-Young Single Step, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 10 instead of 1,000 with the permutation size of 10,000. The power definition is for **complete** power. We have increased the outcomes to 10 with actual affects at 10 as well to see if we can hit an optimal complete power within the limitations of iterations we have set. 
+For the sixth test case of Westfall-Young Single Step, we are starting right off with 10 blocks, a harmonic mean of 100, a sample size of 10 instead of 1,000 with the permutation size of 10,000. The power definition is for **complete** power. We have increased the outcomes to 10 with actual affects at 10 as well to see if we can hit an optimal complete power within the limitations of iterations we have set. To compute complete power, it took **10.87** minutes and a total of **2** iterations. 
 
-* M_mdes = 5
-* Aimpact_mdes = 5
+* M_mdes = 10
+* Aimpact_mdes = 10
 * J_mdes = 10
 * n.j_mdes = 100
 * power_mdes = 0.80
