--- a/Verification_Level2RCT.Rmd
+++ b/Verification_Level2RCT.Rmd
@@ -9,45 +9,62 @@ output: github_document:
     #theme: cerulean
 ---
 
-# Loading data files
+# Set up
 
 ```{r}
 library(yaml)
 library(knitr)
 library(kableExtra)
 library(PowerUpR)
+library(pum)
 
 #read in configs file
 configs <- yaml.load_file("configs.yaml")
 
 #set directory for reading in files
 fdir <- configs$fdir
+```
 
-#files
-power.cor <- "Blocked_i1_2cM6n.j50J20MDES0.125_powerLIST.Rda"
-#simpwr.cor <- "Blocked_i1_2cM3n.j100J20ICC0MDES0.125_S2000B10000_R2.10_R2.20_simpwrLIST.Rda"
 
+# Load power calculation matrices from the simulations
+
+```{r}
 simpwr0 <- "Blocked_i1_2cM6n.j100J20ICC0MDES0.125rho0_S2000B10000_R2.10_R2.20_simpwr.Rda"
 simpwr.2 <- "Blocked_i1_2cM6n.j100J20ICC0MDES0.125rho0.2_S2000B10000_R2.10_R2.20_simpwr.Rda"
 simpwr.5 <- "Blocked_i1_2cM6n.j100J20ICC0MDES0.125rho0.5_S2000B10000_R2.10_R2.20_simpwr.Rda"
 simpwr.8 <- "Blocked_i1_2cM6n.j100J20ICC0MDES0.125rho0.8_S2000B10000_R2.10_R2.20_simpwr.Rda"
 
-
-#load lists
-load(paste0(fdir, power.cor))
 simpwr.cor0 = local(get(load(paste0(fdir, simpwr0))))
 simpwr.cor.2 = local(get(load(paste0(fdir, simpwr.2))))
 simpwr.cor.5 = local(get(load(paste0(fdir, simpwr.5))))
 simpwr.cor.8 = local(get(load(paste0(fdir, simpwr.8))))
 
 
+## next steps - sim: add corr, append tables nto one - do the same for power calc via pum app?
+
+
+
+
+#--------------------OLD---------------------#
+
+#files
+#power.cor <- "Blocked_i1_2cM6n.j50J20MDES0.125_powerLIST.Rda"
+#simpwr.cor <- "Blocked_i1_2cM3n.j100J20ICC0MDES0.125_S2000B10000_R2.10_R2.20_simpwrLIST.Rda"
+
+#load(paste0(fdir, power.cor))
+
 # display power calculation matrices
-power_mutl_storage[[1]]["filename"]
-power_mutl_storage[[1]]["obj"]
+#power_mutl_storage[[1]]["filename"]
+#power_mutl_storage[[1]]["obj"]
     
 # display simulation matrices
 #sim_power_storage[[1]]["simname"]
 #sim_power_storage[[1]]["obj"]
+```
+
+
+# Pull in power calculations matrices via the app
+```{r}
 
 ```
 
