--- a/profile_test.Rmd
+++ b/profile_test.Rmd
@@ -7,7 +7,7 @@ output: pdf_document
 ## Loading the blockrct2_power.R file
 
 ```{r}
-source("blockrct2_power.R")
+#source("blockrct2_power.R")
 #library(pum)
 #source("blockrct2_power_rcpp.R")
 ```
@@ -212,8 +212,17 @@ Number of clusters is back to 2 but, the sample number for Westfall-Young is dou
 * updateProgress = NULL
 
 ```{r}
+source("blockrct2_power.R")
 power.blockedRCT.2(M = 10, MDES = 0.125, Ai = 3 , J = 50 , n.j = 100, R2.1 = 0.5 , p = 0.5 , alpha = 0.05 , numCovar.1 = 5 , numCovar.2 = NULL, ICC = NULL, tnum = 10000, snum = 1000, updateProgress = NULL)
 ```
+
+```{r}
+source("blockrct2_power_rcpp.R")
+power.blockedRCT.2(M = 10, MDES = 0.125, Ai = 3 , J = 50 , n.j = 100, R2.1 = 0.5 , p = 0.5 , alpha = 0.05 , numCovar.1 = 5 , numCovar.2 = NULL, ICC = NULL, tnum = 10000, snum = 1000, updateProgress = NULL)
+```
+
+
+
 
 ## Summary for MDES speed profiles for BH
 
