--- a/Verification_Level2RCT.Rmd
+++ b/Verification_Level2RCT.Rmd
@@ -17,6 +17,7 @@ library(knitr)
 library(kableExtra)
 library(PowerUpR)
 library(pum)
+library(plyr)
 
 #read in configs file
 configs <- yaml.load_file("configs.yaml")
@@ -54,16 +55,15 @@ rowtocolumn <- function(df){
   return(df$mtp)
 }
 
+#add mtps to cols
 listmtps <- lapply(simpwr.c, rowtocolumn)
 simpwr.b <- mapply(cbind, simpwr.c, 'mtp' = listmtps, SIMPLIFY = F)
 
-
+#bind sim tables
+MCmethods <- ldply(simpwr.b, data.frame)
 
 
 ## next steps - sim: append tables nto one - do the same for power calc via pum app?
-
-#merge mtp after append, rownmaes still hold so okay to do 
-
 ```
 
 
@@ -126,40 +126,56 @@ list_of_power <- list(power.corr0, power.corr0.2, power.corr0.5, power.corr0.8)
 #add a correlation column to the data files
 power.c <- Map(cbind, list_of_power, corr=corrlist)
 
+#add mtps to cols
+listmtps.p <- lapply(power.c, rowtocolumn)
+power.b <- mapply(cbind, power.c, 'mtp' = listmtps.p, SIMPLIFY = F)
+
+#bind list of tables into one dataframe
+ourmethods <- ldply(power.b, data.frame)
+
 ```
 
 
-# Verify power calculations against MC methods: Replicate appendix table in report
 
+# Create a table like the appendix table in the report : Verify power calculations against MC methods
 ```{r chunk3_verifyPower}
 #manipulate data frames to make a combined table
-# append lists into one dataset
 
-library(plyr)
-df <- ldply(simpwr, data.frame)
+#subset cols
+ourmethods<- ourmethods[, c("indiv", "min1", "min2", "min3", "min4", "complete", "corr", "mtp")]
+MCmethods<- MCmethods[, c("D1indiv", "min", "X1.3", "X1.2", "X2.3", "full", "corr", "mtp")]
 
-
-
-
-#bind list of data files
-ourmethods <- as.data.frame(rbind(power_mutl_storage[[1]]$obj, power_mutl_storage[[2]]$obj, power_mutl_storage[[3]]$obj, power_mutl_storage[[4]]$obj))
-MCmethods <- as.data.frame(rbind(sim_power_storage[[1]]$obj, sim_power_storage[[2]]$obj, sim_power_storage[[3]]$obj, sim_power_storage[[4]]$obj))
-
-ourmethods<- ourmethods[, c("indiv", "min1", "min2", "min3", "min4", "complete", "correlation", "adjname")]
-MCmethods<- MCmethods[, c("D1indiv", "min", "1/3", "1/2", "2/3", "full", "correlation", "adjname")]
-
+#append a prefix
 colnames(ourmethods) <- paste("method", colnames(ourmethods), sep = "_")
 colnames(MCmethods) <- paste("sim", colnames(MCmethods), sep = "_")
 
+#rename sim mtps for merge
+MCmethods$newsim_mtp<- ifelse(MCmethods$sim_mtp == "Bonferroni", "BF",
+                       ifelse(MCmethods$sim_mtp == "Holm", "HO", 
+                       ifelse(MCmethods$sim_mtp == "WY", "WY-SD", as.character(MCmethods$sim_mtp))))        
+                              
+MCmethods$sim_mtp <- MCmethods$newsim_mtp
+
+MCmethods$newsim_mtp <- NULL
+
 #merge methods and sim tables
-validtable <- merge(ourmethods, MCmethods, by.x = c("method_adjname", "method_correlation"), by.y = c("sim_adjname", "sim_correlation"), all = TRUE) 
+validtable <- merge(ourmethods, MCmethods, by.x = c("method_mtp", "method_corr"), by.y = c("sim_mtp", "sim_corr"), all = TRUE) 
 
-#reorder/subset columns and obs
-validtable$method_adjname <- ordered(validtable$method_adjname, c("rawp", "BF", "HO", "BH", "WY-SD", "WY-SS"))
-validtable <- validtable[order(validtable$method_adjname),]
+#reorder columns and obs
+##NOTE: We do not have WY-SS for simulations - we are currently keeping the matrices as they are and Kristin is going back to add WY-SS to the MC code
 
-validtable <- validtable[, c("method_adjname", "method_correlation", "method_indiv", "sim_D1indiv", "method_min1", "sim_min", "method_min2",
+validtable$method_mtp <- ordered(validtable$method_mtp, c("rawp", "BF", "HO", "BH", "WY-SD", "WY-SS"))
+validtable <- validtable[order(validtable$method_mtp),]
+
+#rename cols
+names(validtable)[names(validtable) == 'sim_X1.3'] <- 'sim_1/3'
+names(validtable)[names(validtable) == 'sim_X1.2'] <- 'sim_1/2'
+names(validtable)[names(validtable) == 'sim_X2.3'] <- 'sim_2/3'
+
+#reorder cols
+validtable <- validtable[, c("method_mtp", "method_corr", "method_indiv", "sim_D1indiv", "method_min1", "sim_min", "method_min2",
                              "sim_1/3", "method_min4", "sim_2/3", "method_complete", "sim_full")]
+
 
 ##create validation table our methods vs MC Sim
 
@@ -177,7 +193,6 @@ validtable.s <- sapply(validtable.s, FUN = as.numeric.factor)
 
 #round values in the table
 validtable.s <- round(validtable.s, 2)
-
 
 #display table
 kable(validtable.s, caption = "MTP Used and Correlations") %>%
